--- a/hzhaoc-f(x)/.obsidian/config
+++ b/hzhaoc-f(x)/.obsidian/config
@@ -39,7 +39,34 @@
     "dimensionality",
     "Sigmoid",
     "th",
-    "multiclass"
+    "multiclass",
+    "Jaccard",
+    "Vectorwise",
+    "vectorwise",
+    "Hubel",
+    "cortexes",
+    "contralateral",
+    "Neocognition",
+    "neocognitron",
+    "Kunihiko",
+    "Fukushima",
+    "CNNs",
+    "convolutional",
+    "downsampling",
+    "activations",
+    "cresceptron",
+    "Weng",
+    "al",
+    "et",
+    "backpropagation",
+    "Neocognitrons",
+    "ConvNet",
+    "elementwise",
+    "thresholding",
+    "ConvNets",
+    "multiclasses",
+    "pre",
+    "pretrained"
   ],
   "alwaysUpdateLinks": true,
   "attachmentFolderPath": "_img"
