--- a/hzhaoc-f(x)/.obsidian/workspace
+++ b/hzhaoc-f(x)/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "bf964d7348c98a6e",
+        "id": "5ca409f4eb563d29",
         "type": "leaf",
         "active": true,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "CS/Deep Learning/Neural Network.md",
+            "file": "CS/Deep Learning/Convolutional Neural Network.md",
             "mode": "preview"
           }
         }
@@ -48,7 +48,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 178
+    "width": 222
   },
   "right": {
     "id": "1dcb0317d36a7fb8",
@@ -64,7 +64,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "CS/Deep Learning/Neural Network.md"
+                "file": "CS/Deep Learning/Convolutional Neural Network.md"
               }
             }
           }
@@ -76,15 +76,15 @@
     "collapsed": true
   },
   "lastOpenFiles": [
-    "CS/Deep Learning/Neural Network.md",
+    "CS/Deep Learning/Convolutional Neural Network.md",
+    "CS/Deep Learning/CNN_RNN.md",
     "CS/Deep Learning/_Index/Deep Learning.md",
-    "www.google.com.md",
-    "asd.md",
-    "Physics/Electricity/_Index/Electricity.md",
-    "CS/Machine Learning/_Index/Machine Learning.md",
-    "CS/Machine Learning/Supvervised/Logistic Regression.md",
-    "CS/Machine Learning/Supvervised/Boosting.md",
-    "CS/Machine Learning/Supvervised/Ensemble.md",
-    "CS/Machine Learning/Supvervised/Model Evaluation.md"
+    "CS/Deep Learning/Untitled.md",
+    "CS/Deep Learning/Neural Network.md",
+    "Math/Permutation/Permutation.md",
+    "Math/Linear Algebra/Norm.md",
+    "Info/Entropy.md",
+    "Info/Mutual Information.md",
+    "Math/Statistics/Binomial Distribution.md"
   ]
 }
