--- a/hzhaoc-y/.obsidian/config
+++ b/hzhaoc-y/.obsidian/config
@@ -1,25 +1,1 @@
-{
-  "theme": "obsidian",
-  "pluginEnabledStatus": {
-    "file-explorer": true,
-    "global-search": true,
-    "switcher": true,
-    "graph": true,
-    "backlink": true,
-    "command-palette": true,
-    "markdown-importer": true,
-    "word-count": true
-  },
-  "spellcheck": true,
-  "spellcheckDictionary": [
-    "Systemized",
-    "dataset",
-    "reduceByKey",
-    "RDDs",
-    "Mesos",
-    "SparkContext",
-    "JVMs",
-    "config",
-    "teleporting"
-  ]
-}
+{"theme":"obsidian","pluginEnabledStatus":{"file-explorer":true,"global-search":true,"switcher":true,"graph":true,"backlink":true,"command-palette":true,"markdown-importer":true,"word-count":true},"spellcheck":true,"spellcheckDictionary":["Systemized","dataset","reduceByKey","RDDs","Mesos","SparkContext","JVMs","config","teleporting"]}
