--- a/hzhaoc-f(x)/.obsidian/app.json
+++ b/hzhaoc-f(x)/.obsidian/app.json
@@ -304,7 +304,21 @@
     "optimality",
     "optimality",
     "subpath",
-    "Strassen"
+    "Strassen",
+    "preprocess",
+    "reweight",
+    "reweighting",
+    "iff",
+    "iteratively",
+    "satisfiable",
+    "unsatisfiable",
+    "GaTech",
+    "OpenMP",
+    "von",
+    "Neumann",
+    "Reusability",
+    "microarchitectural",
+    "microcontrollers"
   ],
   "alwaysUpdateLinks": true,
   "attachmentFolderPath": "_img",
