--- a/hzhaoc-f(x)/.obsidian/app.json
+++ b/hzhaoc-f(x)/.obsidian/app.json
@@ -318,7 +318,32 @@
     "Neumann",
     "Reusability",
     "microarchitectural",
-    "microcontrollers"
+    "microcontrollers",
+    "subtrees",
+    "subtree",
+    "multicycle",
+    "prepending",
+    "datapath",
+    "DSPs",
+    "datapaths",
+    "divs",
+    "rDBMS",
+    "microSIMD",
+    "Subword",
+    "subwords",
+    "subword",
+    "unoptimized",
+    "extrications",
+    "immediates",
+    "multiported",
+    "intercluster",
+    "scalable",
+    "nonlocal",
+    "interconnectivity",
+    "reachability",
+    "shader",
+    "Uncached",
+    "fourier"
   ],
   "alwaysUpdateLinks": true,
   "attachmentFolderPath": "_img",
