--- a/hzhaoc-f(x)/.obsidian/app.json
+++ b/hzhaoc-f(x)/.obsidian/app.json
@@ -343,7 +343,45 @@
     "reachability",
     "shader",
     "Uncached",
-    "fourier"
+    "fourier",
+    "Comparator",
+    "Bitonic",
+    "bitonic",
+    "comparator",
+    "multicomputers",
+    "Hotspots",
+    "multiway",
+    "multicluster",
+    "multiclusters",
+    "Multiflow",
+    "Unbundle",
+    "unbundled",
+    "presum",
+    "parallelize",
+    "presummed",
+    "quicksort",
+    "presums",
+    "hotspots",
+    "preprocessor",
+    "parallelizing",
+    "parallelizable",
+    "Amdahl",
+    "postorder",
+    "liveness",
+    "backend",
+    "doubleword",
+    "defs",
+    "defs",
+    "colorable",
+    "presplitting",
+    "interprocedural",
+    "Postpass",
+    "bipartie",
+    "exe",
+    "postpass",
+    "realloc",
+    "Amongst",
+    "Pseudocode"
   ],
   "alwaysUpdateLinks": true,
   "attachmentFolderPath": "_img",
