--- a/hzhaoc-f(x)/.obsidian/workspace
+++ b/hzhaoc-f(x)/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "c1322bab30f95e87",
+        "id": "2b84d48a9f76765a",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Computer Science/Embedded Systems & Compilers/Registers & Memory.md",
+            "file": "Computer Science/Super Computing Algorithms/Distributed Mem.md",
             "mode": "preview"
           }
         }
@@ -52,7 +52,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 378
+    "width": 344
   },
   "right": {
     "id": "1dcb0317d36a7fb8",
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Computer Science/Embedded Systems & Compilers/Registers & Memory.md",
+                "file": "Computer Science/Super Computing Algorithms/Distributed Mem.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,17 +86,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "c1322bab30f95e87",
+  "active": "2b84d48a9f76765a",
   "lastOpenFiles": [
-    "Computer Science/Embedded Systems & Compilers/Registers & Memory.md",
-    "Computer Science/Embedded Systems & Compilers/Datapath in Microarchitecture.md",
-    "Computer Science/Embedded Systems & Compilers/_Index/Embedded Systems & Compilers.md",
-    "Computer Science/Embedded Systems & Compilers/Embedded System.md",
-    "Computer Science/Embedded Systems & Compilers/Embedded Processor Market.md",
-    "Computer Science/Embedded Systems & Compilers/VLIW ISA.md",
-    "Computer Science/Embedded Systems & Compilers/VLIW Compiler.md",
+    "Computer Science/Super Computing Algorithms/Distributed Mem.md",
     "Computer Science/Super Computing Algorithms/_Index/Super Computing Algorithms.md",
-    "Computer Science/Embedded Systems & Compilers/Untitled.md",
-    "Computer Science/Embedded Systems & Compilers/ISA.md"
+    "Computer Science/Super Computing Algorithms/Work-Span BFS.md",
+    "Computer Science/Super Computing Algorithms/CUDA Parallelism.md",
+    "Computer Science/Embedded Systems & Compilers/Compiler - Intermediary - CFG.md",
+    "Computer Science/Embedded Systems & Compilers/Compiler - Backend - Liveness.md",
+    "Computer Science/Embedded Systems & Compilers/Compiler - Backend - Reg Encoding.md",
+    "Computer Science/Embedded Systems & Compilers/Compiler - Backend - Reg Alloc Opt..md",
+    "Computer Science/Embedded Systems & Compilers/Compiler - Frontend.md",
+    "Computer Science/Embedded Systems & Compilers/Registers & Memory.md"
   ]
 }
