--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -1,32 +1,29 @@
 {
   "main": {
-    "id": "d646a5a9c7942c1a",
+    "id": "fbeef35bb5e9ec72",
     "type": "split",
     "children": [
       {
-        "id": "2b84d48a9f76765a",
+        "id": "33c9156f760f6135",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Computer Science/Super Computing Algorithms/Distributed Memory - Basic Model.md",
-            "mode": "preview"
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
     "direction": "vertical"
   },
   "left": {
-    "id": "5c19e63380460b71",
+    "id": "d303445852ecb46a",
     "type": "split",
     "children": [
       {
-        "id": "a5f5f7cdf5679cf0",
+        "id": "84df1f035b56ce2c",
         "type": "tabs",
         "children": [
           {
-            "id": "d2c2b75583097556",
+            "id": "bfa056c289282404",
             "type": "leaf",
             "state": {
               "type": "file-explorer",
@@ -34,7 +31,7 @@
             }
           },
           {
-            "id": "145db1ef2dab3c1a",
+            "id": "f71f5f16fdef6a49",
             "type": "leaf",
             "state": {
               "type": "search",
@@ -52,23 +49,22 @@
       }
     ],
     "direction": "horizontal",
-    "width": 184
+    "width": 300
   },
   "right": {
-    "id": "1dcb0317d36a7fb8",
+    "id": "84469db29b355c2d",
     "type": "split",
     "children": [
       {
-        "id": "111de798418768b8",
+        "id": "fa858a5467f9b412",
         "type": "tabs",
         "children": [
           {
-            "id": "17b80ddd50395287",
+            "id": "6c4d26d2f8a11248",
             "type": "leaf",
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Computer Science/Super Computing Algorithms/Distributed Memory - Basic Model.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,17 +82,6 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "2b84d48a9f76765a",
-  "lastOpenFiles": [
-    "Computer Science/Super Computing Algorithms/Distributed Memory - Basic Model.md",
-    "Computer Science/Operating System/IPC.md",
-    "Computer Science/Super Computing Algorithms/Work-Span Intro to OpenMP.md",
-    "Computer Science/Computer Architecture/Multi-Process - Shared Memory.md",
-    "Computer Science/Super Computing Algorithms/_Index/Super Computing Algorithms.md",
-    "Computer Science/Super Computing Algorithms/CUDA Parallelism.md",
-    "Computer Science/Super Computing Algorithms/Work-Span BFS.md",
-    "Computer Science/Embedded Systems & Compilers/Compiler - Intermediary - CFG.md",
-    "Computer Science/Embedded Systems & Compilers/Compiler - Backend - Liveness.md",
-    "Computer Science/Embedded Systems & Compilers/Compiler - Backend - Reg Encoding.md"
-  ]
+  "active": "33c9156f760f6135",
+  "lastOpenFiles": []
 }
