--- a/hzhaoc-f(x)/.obsidian/workspace
+++ b/hzhaoc-f(x)/.obsidian/workspace
@@ -7,11 +7,8 @@
         "id": "2b84d48a9f76765a",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Computer Science/Super Computing Algorithms/Distributed Memory - Basic Model.md",
-            "mode": "preview"
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -52,7 +49,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 184
+    "width": 344
   },
   "right": {
     "id": "1dcb0317d36a7fb8",
@@ -68,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Computer Science/Super Computing Algorithms/Distributed Memory - Basic Model.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +84,15 @@
   },
   "active": "2b84d48a9f76765a",
   "lastOpenFiles": [
-    "Computer Science/Super Computing Algorithms/Distributed Memory - Basic Model.md",
-    "Computer Science/Operating System/IPC.md",
-    "Computer Science/Super Computing Algorithms/Work-Span Intro to OpenMP.md",
-    "Computer Science/Computer Architecture/Multi-Process - Shared Memory.md",
+    "Computer Science/Super Computing Algorithms/Distributed Mem.md",
     "Computer Science/Super Computing Algorithms/_Index/Super Computing Algorithms.md",
-    "Computer Science/Super Computing Algorithms/CUDA Parallelism.md",
     "Computer Science/Super Computing Algorithms/Work-Span BFS.md",
+    "Computer Science/Super Computing Algorithms/CUDA Parallelism.md",
     "Computer Science/Embedded Systems & Compilers/Compiler - Intermediary - CFG.md",
     "Computer Science/Embedded Systems & Compilers/Compiler - Backend - Liveness.md",
-    "Computer Science/Embedded Systems & Compilers/Compiler - Backend - Reg Encoding.md"
+    "Computer Science/Embedded Systems & Compilers/Compiler - Backend - Reg Encoding.md",
+    "Computer Science/Embedded Systems & Compilers/Compiler - Backend - Reg Alloc Opt..md",
+    "Computer Science/Embedded Systems & Compilers/Compiler - Frontend.md",
+    "Computer Science/Embedded Systems & Compilers/Registers & Memory.md"
   ]
 }
