--- a/hzhaoc-f(x)/.obsidian/app.json
+++ b/hzhaoc-f(x)/.obsidian/app.json
@@ -381,7 +381,8 @@
     "postpass",
     "realloc",
     "Amongst",
-    "Pseudocode"
+    "Pseudocode",
+    "Isoefficiency"
   ],
   "alwaysUpdateLinks": true,
   "attachmentFolderPath": "_img",
