--- a/hzhaoc-f(x)/.obsidian/app.json
+++ b/hzhaoc-f(x)/.obsidian/app.json
@@ -382,7 +382,8 @@
     "realloc",
     "Amongst",
     "Pseudocode",
-    "Isoefficiency"
+    "Isoefficiency",
+    "Fenwick"
   ],
   "alwaysUpdateLinks": true,
   "attachmentFolderPath": "_img",
