--- a/hzhaoc-f(x)/.obsidian/app.json
+++ b/hzhaoc-f(x)/.obsidian/app.json
@@ -383,7 +383,7 @@
     "Amongst",
     "Pseudocode",
     "Isoefficiency",
-    "Fenwick"
+    "Rematerialization"
   ],
   "alwaysUpdateLinks": true,
   "attachmentFolderPath": "_img",
